--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,7 @@
         {
             "taskName": "build",
             "args": [
-                "${workspaceRoot}/DiceApi.csproj"
+                "${workspaceRoot}/DiceApi.sln"
             ],
             "isBuildCommand": true,
             "problemMatcher": "$msCompile"
